# ap-executor

./: .env  .env.example  Dockerfile  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.devcontainer/: docker-compose.yml
.github/workflows/: docker-image.yml
ap_executor/: __init__.py  celery_app.py  di.py  main.py
ap_executor/api/: __init__.py
ap_executor/api/v1/: health.py  routes.py
ap_executor/api/v1/dependencies/: ap_parser.py
ap_executor/api/v1/execution/: __init__.py  async_exec.py  sync.py
ap_executor/errors/: __init__.py  exceptions.py
ap_executor/models/: __init__.py  pg_json.py
ap_executor/services/: __init__.py  executor.py
ap_executor/tasks/: __init__.py  execute.py
ap_executor/types/: __init__.py  execution.py
docs/docs/: architecture.md  configuration.md  development.md  index.md  modules.md  usage.md
scripts/: export_openapi.py
tests/: conftest.py  test_ap_parser.py  test_api.py  test_executor.py
